# APO_11_C_CPP_HW

./: .travis.yml  CMakeLists.txt  README.md  main.c
consistent_lib/include/: utils.h
consistent_lib/src/: utils.c
include/: parser.h
linters/: run.sh
parallel_lib/: CMakeLists.txt
parallel_lib/include/: utils.h
parallel_lib/src/: utils.c
read_write_test/: read_test.c  write_test.c
src/: main.c  parser.c
test/: CMakeLists.txt  tests.cpp
